<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/hello" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/terms_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@string/terms"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dusty_white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>